# SIT746---Research-Project

./: .gitignore  README.md  pyproject.toml  qtsa_04_qnn_v1.2_demo.ipynb  quantum_sax_fragility.ipynb  requirements.txt  setup.cfg  tpaa_vqc.ipynb  tpaa_vqc_v1.ipynb  tpaa_vqc_v2.ipynb  tpaa_vqc_v3.ipynb  tpaa_vqc_v4.ipynb  utils.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: default.yml
docs/design_docs/: TFSAX → SimpleRNN → Forecast.md
docs/experiments/: README.md  TFSAX Design Doc.md
docs/literature/: README.md
experiments/: 2sin_paa_encoding.ipynb  m4_eda.ipynb  tfsax_encoding.ipynb
notebooks/: correlated_data_demo.ipynb  explorations.ipynb
research/data/: __init__.py  loaders.py  preprocessing.py  twosin_dataset_creation.py
results/metrics/: cross_correlation_summary.csv
src/: __init__.py
src/data/: __init__.py  loaders.py  preprocessing.py
src/data/datasets/Financial/: Core_TimeSeries info.txt  Market_Trend_External info.txt  financial_forecasting_dataset info.txt  stock_market_data_large info.txt  stock_market_multisource_dataset info.txt  stock_market_multisource_dataset.csv
src/experiments/: __init__.py
src/quantum_ml/: __init__.py  circuits.py
tests/: __init__.py
tests/test_data/: test_loaders.py
tests/test_quantum_ml/: __init__.py  test_circuits.py
