[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sit746-research-project"
version = "0.1.0"
description = "Quantum machine learning research utilities and experiments."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
